[package]
name = "eh_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
reqwest = { version = "0.12.20", features = ["socks", "stream"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
